# src/swagger-output.json
@@ -5,7 +5,7 @@
     "description": "ㅇㅔㅇㅣㅊㅣ ㅇㅏㅇㅣ",
     "version": "1.0.0"
   },
-  "host": "127.0.0.1:8080",
+  "host": "3.34.44.44:8080",
   "basePath": "/api",
   "tags": [],
   "schemes": [
@@ -468,8 +468,71 @@
         "tags": [
           "myInfo"
         ],
-        "description": "메인페이지 조회",
+        "description": "마이페이지 내가 포스팅한 글 조회",
         "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/mypage/myinfo": {
+      "get": {
+        "tags": [
+          "myInfo"
+        ],
+        "description": "마이페이지 내 정보 조회",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/bookmarks/{postId}": {
+      "post": {
+        "tags": [
+          "bookmark"
+        ],
+        "description": "북마크 추가",
+        "parameters": [
+          {
+            "name": "postId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "bookmark"
+        ],
+        "description": "북마크 삭제",
+        "parameters": [
+          {
+            "name": "postId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
